--- a/sourcecode/PedidosApp/View/WindowPedidoItemDetail.xaml
+++ b/sourcecode/PedidosApp/View/WindowPedidoItemDetail.xaml
@@ -1,26 +1,25 @@
-﻿<Window x:Class="PedidosApp.View.WindowPedidoDetail"
+﻿<Window x:Class="PedidosApp.View.WindowPedidoItemDetail"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PedidosApp.View"
         mc:Ignorable="d"
-        Title="Detalhe do Pedido" Height="450" Width="800">
+        Title="Detalhe do Item" Height="200" Width="400">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Height="360" Orientation="Vertical" Margin="5, 0 ,5,0">
-            <Label>Número:</Label>
-            <TextBox x:Name="textBoxNumero"></TextBox>
-            <Label>Cliente:</Label>
-            <ComboBox x:Name="comboBoxClient" ItemsSource="{Binding Source=clientsList}">
+        <StackPanel DockPanel.Dock="Top" Height="100" Orientation="Vertical" Margin="5, 0 ,5,0">
+            <Label>Produto:</Label>
+            <ComboBox x:Name="comboBoxProduto" ItemsSource="{Binding Source=clientsList}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Nome}" />
+                            <TextBlock Text="{Binding Descricao}" />
                         </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <local:UserControlPedidoItemResume x:Name="userControlPedidoItemResume"  Height="258" Margin="10" />
+            <Label>Quantidade:</Label>
+            <TextBox x:Name="textBoxQuantidade"></TextBox>
         </StackPanel>
         <DockPanel DockPanel.Dock="Bottom" Height="40">
             <DockPanel Width="230px" DockPanel.Dock="Left" HorizontalAlignment="Right">
